<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.zerows</groupId>
        <artifactId>zero-plugins-extension</artifactId>
        <version>1.0.0</version>
    </parent>

    <artifactId>zero-exmodule-tpl</artifactId>
    <name>(POM) 📚️ - Zero::ExModule::TPL</name>
    <modules>
        <module>zero-exmodule-tpl-domain</module>
        <module>zero-exmodule-tpl-provider</module>
        <module>zero-exmodule-tpl-api</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>